src/app/content/header/header.component.scss
@use 'sass:math';

$header-padding: 1.5rem;
$btn-font-size: 2rem;
$cube-size: 40px;
$half-cube-size: math.div($cube-size, 2);

.header-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: $header-padding 10% $header-padding 2%;
    padding-right: $header-padding;
    background-color: var(--hd-ft-color);
}

.nav-links {
    padding-left: 1rem;
    display: flex;
    justify-content: center;
    gap: 30px;
    transition: transform 0s ease;

    &.open {
        transform: translateX(0);
        transition: transform 0.5s ease;
    }

    .link {
        color: var(--hd-ft-text-color);
        text-decoration: none;
        font-size: 1.5rem;
        display: flex;
        align-items: center;
        gap: 0.5rem;
        position: relative;
        transition: color 0.2s;

        &::after {
            content: '';
            position: absolute;
            left: 0;
            right: 0;
            bottom: 0;
            height: 1px;
            background-color: var(--hd-ft-text-color);
            transition: background-color 0.2s;
        }

        &:hover {
            color: var(--hovered-color);

            &::after {
                background-color: var(--hovered-color);
            }
        }
    }
}

@media (max-width: 600px) {
    .nav-links {
        position: fixed;
        top: 0;
        right: 0;
        height: 100%;
        width: 100%;
        transform: translateX(100%);
        overflow: hidden;
        flex-direction: column;
        gap: 1rem;
        background: var(--hd-ft-color);
        padding: 20px;
    }
    
    .spinning-cube {
        padding-left: 1rem;
        z-index: 9999;
    }

    .hamburger-btn {
        color: var(--hd-ft-text-color);
        display: inline;
        border: none;
        background: transparent;
        font-size: $btn-font-size;
        transition: color 0.2s;

        &:hover {
            color: var(--hovered-color);
        }
    }
}

@media (min-width: 601px) {
    .nav-links {
        position: relative;
        flex-direction: row;
        height: auto;
        width: auto;
        transform: none;
    }

    .hamburger-btn {
        display: none;
    }
}

.cube {
    position: relative;
    width: $cube-size;
    height: $cube-size;
    transform-style: preserve-3d;
    animation: spin 5s infinite linear;
}

.face {
    position: absolute;
    width: $cube-size;
    height: $cube-size;
    background: var(--cube-color);
    border:0px solid black;
    box-shadow: 0 0 0px rgba(0,0,0,0.3);
}

.front {
    transform: translateZ($half-cube-size);
}

.back {
    transform: rotateY(180deg) translateZ($half-cube-size);
}

.right {
    transform: rotateY(90deg) translateZ($half-cube-size);
}

.left {
    transform: rotateY(-90deg) translateZ($half-cube-size);
}

.top {
    transform: rotateX(90deg) translateZ($half-cube-size);
}

.bottom {
    transform: rotateX(-90deg) translateZ($half-cube-size);
}

@keyframes spin {
    0% { transform: rotateX(-45deg) rotateY(0deg); }
    100% { transform: rotateX(-45deg) rotateY(1turn); }
}

.spinning-cube {
    padding-right: 2rem;
}

.theme-switcher {
    margin-left: auto;
}

.close-btn {
    color: var(--hd-ft-text-color);
    position: absolute;
    top: 1rem;
    right: 1rem;
    background: none;
    border: none;
    font-size: $btn-font-size;
    cursor: pointer;
    transition: color 0.2s;

    &:hover {
        color: var(--hovered-color);
    }
}

